--- a/src/app/components/input/themes/neon.scss
+++ b/src/app/components/input/themes/neon.scss
@@ -7,7 +7,7 @@
 
       input {
         @include thick-border;
-        @include neon-container;
+        color: $neon-color;
         background-color: transparent;
       }
     }
