--- a/src/app/components/select/themes/metal.scss
+++ b/src/app/components/select/themes/metal.scss
@@ -13,6 +13,10 @@
         @include metal-interior;
       }
 
+      &.hover-container {
+        filter: $filter-dark;
+      }
+
       .dropdown {
         background-image: $metal-gradient;
         padding: 0 $thick-padding $thick-padding $thick-padding;
