--- a/src/app/pages/components/components.component.scss
+++ b/src/app/pages/components/components.component.scss
@@ -18,6 +18,9 @@
     }
     @include respond('desktop') {
       padding: 2rem 10rem;
+      .components {
+        max-width: 65rem;
+      }
       .themes {
         app-radio {
           margin: 0 1rem;
@@ -33,6 +36,7 @@
       justify-content: space-between;
       flex: 1;
       flex-wrap: wrap;
+      row-gap: 0.5rem;
       margin: 2rem 0;
 
       .button {
